--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
