--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.36.3",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.0",
     "jquery": "^3.6.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.0",
@@ -22,6 +28,7 @@
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
+    "stripe": "^11.10.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.6",
     "web-vitals": "^2.1.4"
